@@ -9,6 +9,7 @@ import java.beans.PropertyChangeSupport;
 import java.beans.PropertyChangeListener;
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
@@ -56,25 +57,9 @@ public class PartyClientModel implements PartyModel
 
   }
 
-
-  @Override public List<Party> getParties(User user)
+  @Override public List<Party> getInvitedParties(User user)
   {
-    if (user == null) return List.of();
-    CompletableFuture<List<Party>> future = new CompletableFuture<>();
-    PropertyChangeListener listener = evt -> {
-      JsonObject json = (JsonObject) evt.getNewValue();
-      Party[] parties = gson.fromJson(json.get("data").getAsString(), Party[].class);
-      future.complete(Arrays.asList(parties));
-    };
-    support.addPropertyChangeListener("getAll", listener);
-    client.requestGetParties(user.getId());
-    try {
-      return future.get(5, TimeUnit.SECONDS);
-    } catch (Exception e) {
-      return List.of();
-    } finally {
-      support.removePropertyChangeListener("getAll", listener);
-    }
+    return List.of();
   }
 
   @Override public Party getParty(int id)
@@ -160,6 +145,26 @@ public class PartyClientModel implements PartyModel
     return null;
   }
 
+  @Override public ArrayList<Party> getMyParties(User user)
+  {
+    return null;
+  }
+
+  @Override public void acceptInvite(User user, Party party)
+  {
+
+  }
+
+  @Override public void declineInvite(User user, Party party)
+  {
+
+  }
+
+  @Override public String getStatus(User user, Party party)
+  {
+    return "";
+  }
+
   @Override public List<Item> getItems(Party party)
   {
     return List.of();
@@ -181,23 +186,12 @@ public class PartyClientModel implements PartyModel
   }
 
   @Override public Party createParty(String name, String description,
-      String location, String organizerId, LocalDate date)
+      String location, String organizerId)
   {
-    CompletableFuture<Party> future = new CompletableFuture<>();
-    PropertyChangeListener listener = evt -> {
-      JsonObject json = (JsonObject) evt.getNewValue();
-      Party party = gson.fromJson(json.get("data").getAsString(), Party.class);
-      future.complete(party);
-    };
-    support.addPropertyChangeListener("createParty", listener);
-    client.requestCreateParty(name, description, location, organizerId, date);
-    try {
-      return future.get(5, TimeUnit.SECONDS);
-    } catch (Exception e) {
-      return null;
-    } finally {
-      support.removePropertyChangeListener("createParty", listener);
-    }
+    client.requestCreateParty(name, description, location, organizerId);
+    String response = client.receive();
+    JsonObject json = JsonParser.parseString(response).getAsJsonObject();
+    return gson.fromJson(json.get("data"), Party.class);
   }
 
   @Override public void updateParty(Party party, String name,
